# charlotte

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
app/: main.py
app/api/: models.py
app/configuration/: configuration_handler.py  helpers.py  iconfiguration_handler.py
app/core/: helpers.py  rasa_handler.py
app/persistence/database/: idatabase_handler.py  inmemory_handler.py  redis_handler.py
app/persistence/files/: ifile_handler.py  yaml_handler.py
app/persistence/object_storage/: inmemory_handler.py  iobjectstorage_handler.py  minio_handler.py
app/utilities/: githandler.py  handlers.py  helpers.py  logger_config.py
utilities/: handlers.py  helpers.py
