[tool.poetry]
name = "charlotte"
version = "0.1.0"
description = ""
authors = ["abotkit.io"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
spacy = "2.3.2"
PyYAML = "5.3.1"
requests = "2.24.0"
minio = "6.0.0"
redis = "3.5.3"
fastapi = "0.61.1"
uvicorn = "0.12.2"
gunicorn = "20.0.4"
pydantic = "1.7.1"
python-dotenv = "0.15.0"
configobj = "5.0.6"
rasa = "^2.1.3"
GitPython = "^3.1.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
